# pydra-filemanip

./: README.md  hatch.toml  pyproject.toml
src/pydra/tasks/filemanip/: __init__.py  utils.py
